[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/F_SMALL_BUTTON.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/BuildMenu.gd" type="Script" id=2]

[node name="BuildMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.196078, 0.196078, 0.588235 )

[node name="btn1" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -186.0
margin_top = -70.0
margin_right = -122.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 1 )
text = "HOUSE"

[node name="btn2" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -149.0
margin_right = -26.0
margin_bottom = -99.0
custom_fonts/font = ExtResource( 1 )
text = "BARRACK"

[node name="btnX" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -85.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 1 )
text = "X"
